# Parallel

./: .gitignore  Parallel.cabal  README.md
src/: Experiments.hs  ParallelStream.hs  RateLimitingStreams.hs
src/sudoku/: ParallelSudokuSolver.hs
