name:                Parallel
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/Parallel#readme
license:             BSD3
license-file:        LICENSE
author:              Abhiroop Sarkar
maintainer:          asiamgenius@gmail.com
copyright:           2016 Abhiroop Sarkar
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       array >= 0.5.1.1,
                       base >= 4.7 && < 5,
                       deepseq >= 1.4.2.0,
                       monad-par,
                       parallel >= 3.2.1.0
  default-language:    Haskell2010

executable Parallel-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       Parallel
                     , array >= 0.5.1.1
                     , base
                     , deepseq >= 1.4.2.0
                     , monad-par
                     , parallel >= 3.2.1.0
  default-language:    Haskell2010

executable sudoku
  hs-source-dirs: src/sudoku
  main-is: ParallelSudokuSolver.hs
  other-modules: Sudoku
  build-depends: Parallel
               , array >= 0.5.1.1
               , base
               , deepseq >= 1.4.2.0
               , parallel >= 3.2.1.0
  ghc-options: -threaded -rtsopts -eventlog -main-is ParallelSudokuSolver.main 
  default-language: Haskell2010

test-suite Parallel-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       Parallel
                     , array >= 0.5.1.1
                     , base
                     , deepseq >= 1.4.2.0
                     , parallel >= 3.2.1.0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Parallel
